# Herald

./: .devcontainer.json  .gitignore  Cargo.toml  README.md  io.github.zlendy.herald.json  meson.build
.cargo/: config.toml
.devcontainer/: Dockerfile
app/: Cargo.toml
app/src/: main.rs
crates/: Cargo.toml
crates/examples/: try_http.py  try_http.rs  try_websockets.rs
crates_usage/: Cargo.toml
crates_usage/examples/: example.env  try_http.rs  try_login.py  try_login.rs
data/: io.github.zlendy.herald.appdata.xml.in  io.github.zlendy.herald.desktop.in  io.github.zlendy.herald.gschema.xml  meson.build
data/icons/: meson.build
design/: mockup.cmb  viewstack.ui
docker/: Dockerfile  docker-compose.yml  example.env
examples/: README.md  http_example.rs  requirements.txt  websocket.py  websocket.rs  websockets_example.py  websockets_example.rs
main/: Cargo.toml  build.rs
main/qml/: main.qml
main/src/: implementation.rs  main.rs
mockup/: main.ui
po/: POTFILES  meson.build
qml/: main.qml
src/: config.rs  herald.gresource.xml  implementation.rs  lib.rs  main.rs  meson.build  mod.rs  window.ui
src/models/gotify/: application.rs  client.rs  error.rs  message.rs  mod.rs  paged_messages.rs  paging.rs  user.rs  version_info.rs
src/services/: gotify.rs  mod.rs
src/views/: factory_async.rs  mod.rs
src/views/login/: widget.rs
src/views/messages/: widget.rs
src/widgets/: about_dialog.rs  app.rs  factory_async.rs  login.rs  mod.rs  root.rs
src/widgets/apps/: container.rs  factory.rs
src/widgets/client/: container.rs  factory.rs
src/widgets/clients/: factory.rs
src/widgets/login/: widget.rs
src/widgets/message/: container.rs  factory.rs
src/widgets/message_container/: widget.rs
src/widgets/message_factory/: mod.rs  models.rs  widget.rs
src/widgets/messages/: container.rs  factory.rs
src/widgets/users/: container.rs  factory.rs
