[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.92"
cxx-qt = "0.5.0"
cxx-qt-lib = "0.5.0"
cstr = "0.2.11"
dotenv = "0.15.0"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "io-std"] }
native-tls = "0.2.11"
futures-channel = "0.3.26"
futures-util = "0.3.26"
url = "2.3.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
lazy_static = "1.4.0"
serde = "1.0.154"
serde_derive = "1.0.154"
async-trait = "0.1.66"

[build-dependencies]
cxx-qt-build = "0.5.0"
qt-build-utils = "0.5.0"
